--- a/store-front/contact.html
+++ b/store-front/contact.html
@@ -266,7 +266,7 @@
     </section>
 
     <!-- FAQ Section -->
-    <section class="faq-section">
+    <section class="faq-section" id="faq">
         <div class="container">
             <h2>Frequently Asked Questions</h2>
             
@@ -324,8 +324,8 @@
                     <h3>Support</h3>
                     <ul>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Shipping</a></li>
+                        <li><a href="contact.html#faq">FAQs</a></li>
+                        <li><a href="track.html">Shipping</a></li>
                         <li><a href="#">Returns</a></li>
                     </ul>
                 </div>
