--- a/store-front/index.html
+++ b/store-front/index.html
@@ -196,8 +196,8 @@
                     <h3>Support</h3>
                     <ul>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Shipping</a></li>
+                        <li><a href="contact.html#faq">FAQs</a></li>
+                        <li><a href="track.html">Shipping</a></li>
                         <li><a href="#">Returns</a></li>
                     </ul>
                 </div>
